# spectronix-blood

./: ._README.md  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_beta  README.md  blood_fever.cpp  blood_fever.hpp  demo_blood.cpp  demo_combined.cpp  demo_fever.cpp  environment.yml  main.cpp  requirements.txt
convert/: conversion.py  serialize-v0.py  serialize-v1.py  serialize-v2.py  serialize.py  serialize_combined.py
examples/: AllClassDetectionForThermalCamera.ipynb  python_test-v2.py  python_test.ipynb  python_test.py  pytorch_test.ipynb  torchscript_test-v2.py  torchscript_test.ipynb  torchscript_test.py  torchscript_test_blood.ipynb  torchscript_test_blood_labels.ipynb
include/: blood.hpp  blood_combined.hpp  fever.hpp  fever_combined.hpp  utils.hpp
notebooks/: ._demo_torchscript_labels.ipynb  demo_pytorch.ipynb  demo_torchscript.ipynb  demo_torchscript_labels.ipynb  pytorch_test.ipynb
python/: detect.py  detect_remote.py  process.py  serialize.py  serialize_combined.py  test_pytorch.py  train.py  validate.py
script/: .script.py.swp  box_head.py  yolo.py
src/: .detector.cpp.swn  .detector.cpp.swo  .detector.cpp.swp  blood.cpp  blood_combined.cpp  fever.cpp  fever_combined.cpp  utils.cpp
